--- a/index.html
+++ b/index.html
@@ -30,17 +30,15 @@
     <main>
       <div class="card">
         <div class="card__result">
-          <h2>Your Result</h2>
+          <h2 class="card__result--head">Your Result</h2>
 
-          <div>
-            <p>76</p>
-            <span>of 100 </span>
+          <div class="card__result--circle">
+            <p class="card__result--circle-start">76</p>
+            <span class="card__result--circle-end"> of 100 </span>
           </div>
-
-          <p>Great</p>
-
-          <p>
-            You scored higher than 65% of the people who have taken these tests.
+          <p class="card__result--great">Great</p>
+          <p class="card__result--text">
+            You scored higher than 65% of the people who have taken these tests!
           </p>
         </div>
         <div class="card__Summary">
